crates/ignis_driver/tests/snapshots/e2e_ok__template_literal_interpolates_expressions.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: sum=7 doubled=6
owned=owned borrowed=owned
nested=inner 3
stderr: (empty)
