crates/ignis_driver/tests/snapshots/e2e_ok__template_literal_interpolates_primitives.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: name=ignis
version=4
ready=true
initial=I
ratio=0.5
stderr: (empty)
