crates/ignis_driver/tests/snapshots/e2e_ok__three_level_generic_specializations_are_ordered_transitively.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 21
stdout: (empty)
stderr: (empty)
