crates/ignis_driver/tests/snapshots/e2e_ok__type_name_resolves_past_an_overload_group_of_the_same_name.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 37
stdout: (empty)
stderr: (empty)
